--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "vue": "^2.4.2",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vue-resource": "^1.3.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -27,6 +28,8 @@
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "stylus-loader":"^2.5.1",
+    "stylus":"0.52.4",
     "cssnano": "^3.10.0",
     "eslint": "^3.19.0",
     "eslint-friendly-formatter": "^3.0.0",
